--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -28,6 +28,7 @@
 		max-width: 478px
 		width: 100%
 		transform: translate(-50%, 50%)
+		overflow-y: scroll
 		@media screen and ( max-height: 490px)
 			padding: 14px 88px
 		@media screen and ( max-width: 576px)
@@ -56,6 +57,8 @@
 			border-radius: 4px
 			min-height: 50px
 			color: $text-color
+			@media screen and ( max-height: 490px)
+					margin: 0
 	&__message
 		margin: 0 0 15px 0
 		@media screen and ( max-height: 490px)
